--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ h3 {
 .producto {
   background-color: var(--primarioOscuro);
   padding: 1rem;
+
 }
 .producto__nombre {
   font-size: 4rem;
@@ -123,6 +124,7 @@ h3 {
     display: flex;
     flex-direction: column-reverse;
     justify-content: center;
+ 
     padding: 2rem;
     gap: 2rem;
 }
@@ -131,4 +133,20 @@ h3 {
         flex-direction: row;
         
     }
+}
+.bloques{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 2rem;
+}
+@media (min-width: 768px) {
+    .bloques{
+        grid-template-columns: repeat(4,1fr);
+    }
+}
+.bloque{
+    text-align: center;
+}
+.bloque__titulo{
+    font-size: 2remrem;
 }
