--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ h3 {
 .bloques{
     display: grid;
     grid-template-columns: repeat(2,1fr);
-    gap: 2rem;
+    column-gap: 2rem;
 }
 @media (min-width: 768px) {
     .bloques{
@@ -149,4 +149,41 @@ h3 {
 }
 .bloque__titulo{
     font-size: 2remrem;
+}
+
+@media (min-width: 768px) {
+    .contenidoCamisa{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+    }
+}
+
+
+.formulario{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+}
+.formulario__campo{
+    border: 1rem solid var(--primarioOscuro);
+    background-color: transparent;
+    color: var(--blanco);
+    font-size: 2rem;
+    padding: 1rem;
+   
+}
+.formulario__submit{
+    background-color: var(--secundario);
+    border: none;
+    padding: 2rem;
+    border-radius: 2rem;
+    grid-column: 1 / 3;
+    transition: background-color 1s ease;
+}
+.formulario__submit:hover{
+    cursor: pointer;
+    color: var(--blanco);
+
+    background-color: var(--primario);
 }
